cluster-test/httpbin/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  annotations:
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
spec:
  rules:
    - host: httpbin.framsburg.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  name: http
  tls:
    - hosts:
        - httpbin.framsburg.ch
      secretName: httpbin-framsburg-ch-tls
